# nimbus-auth

./: .gitmodules  README.md
source/: Cargo.toml
source/application/: Cargo.toml
source/application/src/: services.rs  use_cases.rs
source/application/src/services/: keypair_repository.rs  random_service.rs  session_repository.rs  time_service.rs  transactions.rs  user_repository.rs
source/application/src/services/keypair_repository/: errors.rs
source/application/src/services/random_service/: errors.rs
source/application/src/services/session_repository/: errors.rs
source/application/src/services/transactions/: errors.rs
source/application/src/services/user_repository/: errors.rs
source/application/src/use_cases/: authorize.rs  dtos.rs  get_public_key.rs  refresh.rs  rotate_keypairs.rs  signin.rs  signup.rs
source/application/src/use_cases/authorize/: errors.rs  schema.rs
source/application/src/use_cases/dtos/: access_token.rs  session.rs  user.rs
source/application/src/use_cases/get_public_key/: errors.rs  schema.rs
source/application/src/use_cases/refresh/: errors.rs  schema.rs
source/application/src/use_cases/rotate_keypairs/: errors.rs  schema.rs
source/application/src/use_cases/signin/: errors.rs  schema.rs
source/application/src/use_cases/signup/: errors.rs  schema.rs
source/domain/: Cargo.toml
source/domain/src/: entities.rs  value_objects.rs
source/domain/src/entities/: keypair.rs  session.rs  user.rs
source/domain/src/entities/keypair/: errors.rs  specifications.rs  value_objects.rs
source/domain/src/entities/keypair/value_objects/: errors.rs
source/domain/src/entities/session/: specifications.rs
source/domain/src/entities/user/: errors.rs  specifications.rs  value_objects.rs
source/domain/src/entities/user/value_objects/: e2e_key_hash.rs  encrypted_master_key.rs  name.rs  password.rs  password_hash.rs  user_name.rs
source/domain/src/entities/user/value_objects/name/: errors.rs
source/domain/src/entities/user/value_objects/password/: errors.rs  tests.rs
source/domain/src/entities/user/value_objects/password_hash/: errors.rs  tests.rs
source/domain/src/entities/user/value_objects/user_name/: errors.rs  tests.rs
source/domain/src/value_objects/: access_token.rs  identifier.rs  keypair_value.rs  text.rs  user_claims.rs
source/domain/src/value_objects/access_token/: errors.rs  specifications.rs  tests.rs
source/domain/src/value_objects/keypair_value/: errors.rs
source/entrypoint/: Cargo.toml
source/entrypoint/src/: errors.rs  main.rs
source/infrastructure/: Cargo.toml
source/infrastructure/src/: api.rs  axum_api.rs  converters.rs  lib.rs  postgres_db.rs  services.rs  services_implementations.rs  web_api.rs
source/infrastructure/src/api/: errors.rs
source/infrastructure/src/api/handlers/: signup.rs
source/infrastructure/src/axum_api/: errors.rs  extractors.rs  handlers.rs  middleware.rs
source/infrastructure/src/axum_api/extractors/: authorization_extractor.rs  rate_limiting_key_extractor.rs
source/infrastructure/src/axum_api/extractors/authorization_extractor/: errors.rs
source/infrastructure/src/axum_api/handlers/: get_public_key.rs  refresh.rs  rotate_keypairs.rs  signin.rs  signup.rs
source/infrastructure/src/axum_api/middleware/: cors.rs  errors.rs  hsts.rs  rate_limiting.rs
source/infrastructure/src/axum_api/responses/: proto.rs
source/infrastructure/src/postgres_db/: errors.rs  transactions.rs
source/infrastructure/src/postgres_db/types/: user_role.rs
source/infrastructure/src/services/: os_random_service.rs  os_time_service.rs  postgres_user_repository.rs  user_repositories.rs
source/infrastructure/src/services_implementations/: filesystem_inmemory_cached_keypair_repository.rs  filesystem_keypair_repository.rs  os_random_service.rs  os_time_service.rs  postgres_session_repository.rs  postgres_user_repository.rs
source/infrastructure/src/services_implementations/postgres_session_repository/: queries.rs  schema.rs
source/infrastructure/src/services_implementations/postgres_session_repository/schema/: errors.rs
source/infrastructure/src/services_implementations/postgres_user_repository/: queries.rs  schema.rs  transactional.rs
source/infrastructure/src/services_implementations/postgres_user_repository/schema/: errors.rs
source/infrastructure/src/web_api/: errors.rs  extractors.rs  middleware.rs
source/infrastructure/src/web_api/extractors/: authorization_extractor.rs  client_extractor.rs  session_extractor.rs
source/infrastructure/src/web_api/handlers/: get_public_key.rs  refresh.rs  rotate_keypairs.rs  signin.rs  signup.rs
source/infrastructure/src/web_api/middleware/: cors.rs  errors.rs  tracing.rs
source/infrastructure/src/web_api/middleware/cors/: errors.rs
source/infrastructure/src/web_api/responses/: proto.rs
source/proto/: Cargo.toml  build.rs
source/shared/: Cargo.toml
source/shared/src/: config.rs  constants.rs  errors.rs  futures.rs  lib.rs  macros.rs  types.rs
source/tests/: Cargo.toml
source/tests/src/: mocks.rs  tests.rs  utils.rs
source/tests/src/mocks/: services.rs
source/tests/src/mocks/services/: keypair_repository.rs  session_repository.rs  user_repository.rs
source/tests/src/tests/: integration.rs
source/tests/src/tests/entities/: user.rs
source/tests/src/tests/integration/: api.rs
source/tests/src/tests/integration/api/signup/: valid_data_no_existing_user_success.rs
source/tests/src/tests/integration/signup/: success.rs
source/tests/src/tests/integration/signup/success/: mocks.rs
source/tests/src/tests/mocks/: database.rs  datastore.rs
source/tests/src/tests/mocks/services/: keypair_repository.rs  session_repository.rs  user_repository.rs
source/tests/src/tests/unit/: domain.rs
source/tests/src/tests/unit/domain/: password.rs  password_hash.rs  user_name.rs
source/tests/tests/api/: mod.rs  signup.rs
source/tests/tests/api/signup/: valid_data_no_existing_user_success.rs
tests/integration/v1/signup/success/: request.http  request.textproto
tests/scripts/: deserialize_response.sh  serialize_request.sh
