[workspace]
members = [
    "domain",
    "application",
    "infrastructure",
    "entrypoint",
    "shared",
    "proto",
    "tests"
]

[workspace.dependencies]
# Common
time = "0.3.42"
ulid = "1.2.1"
thiserror = "2.0.16"
url = "2.5.7"

# Tracing
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

# Runtime
tokio = { version = "1.45.1", features = ["full"] }

# Security
zeroize = { version = "1.8.1", features = ["derive"] }

# Crypto
argon2 = { version = "0.5.3", features = ["zeroize"] }