[workspace]
members = [
    "domain",
    "application",
    "infrastructure",
    "entrypoint",
    "shared",
    "proto",
    "tests"
]

[workspace.dependencies]
# Common
time = "0.3.42"
ulid = "1.2.1"
thiserror = "2.0.16"
url = "2.5.7"
rand = "0.8"

# Utilities
dashmap = { version = "6.1.0" }

# Tracing
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

# Runtime
tokio = { version = "1.45.1", features = ["full"] }

# Security
zeroize = { version = "1.8.1", features = ["derive"] }

# Crypto
argon2 = { version = "0.5.3", features = ["zeroize"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "pkcs8", "pem"] }

# Protobuf
prost = "0.12"

# Http
reqwest = { version = "0.12" }