[package]
name = "nimbus_auth_application"
version = "0.1.0"
edition = "2024"

[dependencies]
# Local crates dependencies
nimbus_auth_domain = { path = "../domain" }
nimbus_auth_shared = { path = "../shared" }

# Workspace dependencies
tracing.workspace = true
tracing-subscriber.workspace = true
time.workspace = true
ulid.workspace = true
thiserror.workspace = true
tokio.workspace = true