[package]
name = "nimbus_auth_domain"
version = "0.1.0"
edition = "2024"

[dependencies]
# Local crates dependencies
nimbus_auth_shared = { path = "../shared" }

# Crypto
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "pkcs8", "pem"] }
rand = "0.8"

# JWT
jsonwebtoken = "9.3.1"
serde = { version = "1.0", features = ["derive"] }

# Workspace dependencies
tracing.workspace = true
tracing-subscriber.workspace = true
time.workspace = true
ulid.workspace = true
thiserror.workspace = true