[package]
name = "nimbus_auth_infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
# Local crates dependencies
nimbus_auth_domain = { path = "../domain" }
nimbus_auth_application = { path = "../application" }
nimbus_auth_shared = { path = "../shared" }
nimbus_auth_proto = { path = "../proto" }

# Workspace dependencies
tracing.workspace = true
tracing-subscriber.workspace = true
time.workspace = true
ulid.workspace = true
thiserror.workspace = true
tokio.workspace = true
zeroize.workspace = true
argon2.workspace = true

# Api
axum = "0.8.4"

# Protobuf
prost = "0.12"

# Crypto
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "pkcs8", "pem"] }
rand = "0.8"

# Database
sqlx = { version = "0.8", features = [ "postgres", "sqlite", "runtime-tokio", "tls-native-tls", "time" ] }