[package]
name = "nimbus_auth_infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
# Local crates dependencies
nimbus_auth_domain = { path = "../domain" }
nimbus_auth_application = { path = "../application" }
nimbus_auth_shared = { path = "../shared" }
nimbus_auth_proto = { path = "../proto" }

# Workspace dependencies
tracing.workspace = true
tracing-subscriber.workspace = true
time.workspace = true
ulid.workspace = true
thiserror.workspace = true
tokio.workspace = true
zeroize.workspace = true
argon2.workspace = true
rand.workspace = true
ed25519-dalek.workspace = true
prost.workspace = true

# Crate specific dependencies
axum = { version = "0.8.4", default-features = false, features = ["http1", "http2", "tokio", "tracing"] }
axum-extra = { version = "0.10.3", features = ["cookie"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace", "set-header"] }
sqlx = { version = "0.8", features = [ "postgres", "sqlite", "runtime-tokio", "tls-native-tls", "time" ] }