[package]
name = "nimbus_auth_tests"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
nimbus_auth_domain = { path = "../domain" }
nimbus_auth_application = { path = "../application" }
nimbus_auth_infrastructure = { path = "../infrastructure" }
nimbus_auth_shared = { path = "../shared" }
nimbus_auth_proto = { path = "../proto" }

# Runtime
tokio = { version = "1.45.1", features = ["full"] }

# Mocks
mockall = "0.13.1"

# Protobuf
prost = "0.12"