[package]
name = "nimbus_auth_tests"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
nimbus_auth_domain = { path = "../domain" }
nimbus_auth_application = { path = "../application" }
nimbus_auth_infrastructure = { path = "../infrastructure" }
nimbus_auth_shared = { path = "../shared" }
nimbus_auth_proto = { path = "../proto" }

# Workspace dependencies
time.workspace = true
ulid.workspace = true
zeroize.workspace = true
argon2.workspace = true

# Runtime
tokio = { version = "1.45.1", features = ["full"] }

# Protobuf
prost = "0.12"

# Http
reqwest = { version = "0.12" }

# Utilities
dashmap = { version = "6.1.0" }