[package]
name = "nimbus_auth_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
nimbus_auth_domain = { path = "../domain" }
nimbus_auth_application = { path = "../application" }
nimbus_auth_infrastructure = { path = "../infrastructure" }
nimbus_auth_shared = { path = "../shared" }
nimbus_auth_proto = { path = "../proto" }

# Workspace dependencies
time.workspace = true
ulid.workspace = true
zeroize.workspace = true
argon2.workspace = true
tokio.workspace = true
prost.workspace = true
reqwest.workspace = true
dashmap.workspace = true
ed25519-dalek.workspace = true

# Crate specific dependencies
testcontainers = "0.25.0"